1.3.6
  lars-a   Various improvements (tvdb, medialist handling etc.)
1.3.5
  Maven85  Remove dialog: remove single provider from medialist & entry from OSMOSIS' database
  Maven85  Possibility to select the entry from medialist in the creation dialog
  Maven85  Skip OV-Streams for episodes
  Maven85  Modernize folderstructure of languages
  Maven85  New resumepoint dialog
1.3.4
  Maven85  Option to search for episode information from TheTVDB
  Maven85  Refactoring and optimize encoding
1.3.3
  Maven85  Python cache enabled
1.3.0-1.3.2
  Maven85  Fix resume function in kodi18
  Maven85  Search episode data on TVDB if season and episode numbers are not specified + caching
  gu3nter  Added MYSQL support for Music
  Gismo112 Add SkinUpdate Resume / Watchedstates
  gu3nter  Sqlite3 and MYSQL are now supported in one Branch
  Maven85  Set content of listitems; remove setting of support for exodus/xstream 
  Maven85  Option to detect Kodi's SQLite DBs automatically
  Maven85/Gismo112 Fix music for kodi 18
  Maven85  New function to update single items  

1.2.9-1.3.0
  Gismo112 Fix watchedstate for not resumed video
  gu3nter  Added option to hide movies in [OV] (e. g. AMAZON VOD)
  gu3nter  Fix for "support single movies"
  Gismo112 Fix for Series-Resume-Point
  Maven85  Support single movies
  Maven85  Add SkyGo extension
  Maven85  Change the condition for displaying addons
  Maven85  Check the provider for a medialist entry
  Maven85  [TVShows]: Url update (db) if changed
  Maven85  Abort the create dialog without error message 
  Maven85  Display addon name in "Remove Media"-dialog
  Maven85  JSON support
  Maven85  [ADD TVShows]: Fix for adding a complete series (AmazonVOD)
  Maven85  Movies: Option to save each stream to its own folder
  Maven85  Fix Umlaut in "Remove Media"-dialog
  Maven85  Movies: Option to save streams to its own superfolder (per MediaList entry)
  Maven85  Xs fix
  Maven85  Remove xS support
  Maven85  Fix: Android add and remove