@@ -2,7 +2,6 @@
 <addon id="plugin.video.osmosis" name="OSMOSIS" version="1.3.6" provider-name="Stereodruid, Maven85, gismo112">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
-		<import addon="script.module.simple.downloader" version="0.9.4" />
 		<import addon="script.module.simplejson" version="3.3.0" />
 		<import addon="script.common.plugin.cache" version="2.5.2" />
 		<import addon="script.module.myconnpy" version="1.1.7"/>
